# lines-of-code

./: Cargo.toml  README.md  flake.nix
.github/workflows/: release.yaml
assets/fonts/: license.txt  readme.txt
assets/shaders/: starfield.wgsl
src/: absorption_systems.rs  asset_resources.rs  attachment_systems.rs  colors.rs  components.rs  consts.rs  despawn_recursive.rs  enemy_spawners.rs  events.rs  main.rs  nodes.rs
src/asset/: constants.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/audio/: audio_type.rs  events.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/camera/: mod.rs  plugin.rs  resources.rs  systems.rs
src/enemy/: components.rs  constants.rs  events.rs  mod.rs  plugin.rs  spawners.rs  systems.rs
src/object/: components.rs  mod.rs  plugin.rs  systems.rs
src/player/: components.rs  constants.rs  events.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/schedule/: events.rs  game_state.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/schedule/systems/: fading.rs  game_states.rs  mod.rs
src/starfield/: components.rs  mod.rs  plugin.rs  systems.rs
src/stats/: mod.rs  plugin.rs  resources.rs  systems.rs
src/ui/: components.rs  constants.rs  helper.rs  mod.rs  plugin.rs
src/ui/systems/: end_screen.rs  general.rs  ingame.rs  main_menu.rs  mod.rs  paused.rs  splash_screen.rs
src/window/: mod.rs  plugin.rs
