[package]
name = "escape-pod"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = {version="0.8", features=["wav"]}
rand = "0.8.5"
#bevy_editor_pls = "0.1.0"

# Flickering fix
[patch.crates-io]
wgpu = { git = "https://github.com/mockersf/wgpu/", branch = "unconditional-clear-workaround" }